--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,9 +1,14 @@
 
+@font-face {
+    font-family: AvenirNextLTPro-Demi;
+    src: url(AvenirNextLTPro-Demi.ttf);
+}
+
 h2.name{
   font-size: 245;
 }
 body {
-  font-family: 'Raleway', sans-serif;
+  font-family: AvenirNextLTPro-Demi;
   color: #545E6C;
   background: #f5f5f5;
   font-size: 15px;
