--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,11 +8,11 @@ h2.name{
   font-size: 245;
 }
 body {
-  font-family: AvenirNextLTPro-Demi;
+  font-family: 'Titillium Web', sans-serif !important;
   color: #545E6C;
   background: #f5f5f5;
   font-size: 15px;
-  
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -73,7 +73,7 @@ img.profile {
   color: #fff;
 }
 .sidebar-wrapper .name {
-  
+
   font-weight: 900;
   margin-top: 0;
   margin-bottom: 10px;
